# edda

./: .env  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  install.sh  lefthook.yml  opencode.json  plan-161.md
.claude/: CLAUDE.md
.deep-dive/: innovate.md  plan.md  research.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.tmp/: commit_msg.txt  phase3-comment.md
.tmp/deep-dive-163/: innovate.md  plan.md  research.md
crates/edda-aggregate/: Cargo.toml
crates/edda-aggregate/src/: aggregate.rs  controls.rs  graph.rs  lib.rs  quality.rs  risk.rs  rollup.rs
crates/edda-ask/: Cargo.toml
crates/edda-ask/src/: lib.rs  staleness.rs
crates/edda-bridge-claude/: Cargo.toml
crates/edda-bridge-claude/src/: admin.rs  agent_phase.rs  bg_detect.rs  bg_digest.rs  bg_extract.rs  bg_index.rs  bg_scan.rs  controls_suggest.rs  decision_warning.rs  digest.rs  dispatch.rs  issue_proposal.rs  lib.rs  narrative.rs  nudge.rs  parse.rs  pattern.rs  peers.rs  plan.rs  redact.rs  render.rs  signals.rs  state.rs  task_nudge.rs  watch.rs
crates/edda-bridge-claude/src/digest/: extract.rs  helpers.rs  mod.rs  orchestrate.rs  prev.rs  render.rs  tests.rs
crates/edda-bridge-claude/src/dispatch/: events.rs  helpers.rs  mod.rs  session.rs  tests.rs  tools.rs
crates/edda-bridge-claude/src/peers/: autoclaim.rs  board.rs  discovery.rs  heartbeat.rs  helpers.rs  mod.rs  render_coord.rs  render_fleet.rs  tests.rs
crates/edda-bridge-codex/: Cargo.toml
crates/edda-bridge-codex/src/: admin.rs  dispatch.rs  lib.rs  parse.rs
crates/edda-bridge-cursor/: Cargo.toml
crates/edda-bridge-cursor/src/: admin.rs  dispatch.rs  lib.rs  parse.rs
crates/edda-bridge-hermes/: Cargo.toml
crates/edda-bridge-openclaw/: Cargo.toml
crates/edda-bridge-openclaw/src/: admin.rs  dispatch.rs  lib.rs  parse.rs
crates/edda-chronicle/: Cargo.toml
crates/edda-chronicle/src/: anchor.rs  attention.rs  classify.rs  extract.rs  lib.rs  relate.rs  state.rs  synthesize.rs
crates/edda-cli/: Cargo.toml
crates/edda-cli/src/: cmd_actor.rs  cmd_ask.rs  cmd_blob.rs  cmd_branch.rs  cmd_bridge.rs  cmd_brief.rs  cmd_bundle.rs  cmd_commit.rs  cmd_conduct.rs  cmd_config.rs  cmd_context.rs  cmd_controls.rs  cmd_draft.rs  cmd_export.rs  cmd_gc.rs  cmd_group.rs  cmd_init.rs  cmd_intake.rs  cmd_log.rs  cmd_merge.rs  cmd_migrate.rs  cmd_note.rs  cmd_notify.rs  cmd_pair.rs  cmd_pattern.rs  cmd_phase.rs  cmd_pipeline.rs  cmd_plan.rs  cmd_policy.rs  cmd_propose.rs  cmd_prs.rs  cmd_query.rs  cmd_rebuild.rs  cmd_recap.rs  cmd_rules.rs  cmd_run.rs  cmd_scan.rs  cmd_search.rs  cmd_serve.rs  cmd_skill.rs  (+11 more)
crates/edda-cli/src/skills/: coord-review.md  coord-sync.md
crates/edda-cli/src/tui/: app.rs  mod.rs  ui.rs
crates/edda-conductor/: Cargo.toml
crates/edda-conductor/src/: lib.rs  tmux.rs
crates/edda-conductor/src/agent/: budget.rs  launcher.rs  mod.rs  stream.rs
crates/edda-conductor/src/check/: cmd_succeeds.rs  edda_event.rs  engine.rs  file_contains.rs  file_exists.rs  git_clean.rs  mod.rs  wait_until.rs
crates/edda-conductor/src/plan/: mod.rs  parser.rs  schema.rs  topo.rs
crates/edda-conductor/src/runner/: edda.rs  event_log.rs  mod.rs  notify.rs  sequential.rs
crates/edda-conductor/src/state/: brief.rs  derive.rs  machine.rs  mod.rs  persist.rs
crates/edda-core/: Cargo.toml
crates/edda-core/src/: agent_phase.rs  approval.rs  bundle.rs  canon.rs  decision.rs  event.rs  git.rs  hash.rs  lib.rs  policy.rs  secret_guard.rs  tool_tier.rs  types.rs
crates/edda-derive/: Cargo.toml
crates/edda-derive/src/: context.rs  evidence.rs  lib.rs  snapshot.rs  types.rs  writers.rs
crates/edda-derive/src/context/: helpers.rs  mod.rs  session.rs
crates/edda-index/: Cargo.toml
crates/edda-index/src/: lib.rs
crates/edda-ingestion/: Cargo.toml
crates/edda-ingestion/src/: lib.rs  suggestion.rs  trigger.rs  types.rs  writer.rs
crates/edda-ledger/: Cargo.toml
crates/edda-ledger/src/: blob_meta.rs  blob_store.rs  device_token.rs  domain.rs  ledger.rs  lib.rs  lock.rs  migrate.rs  paths.rs  sqlite_store.rs  sync.rs  tasks.rs  tombstone.rs  view.rs
crates/edda-ledger/src/sqlite_store/: decisions.rs  dependencies.rs  entities.rs  events.rs  mappers.rs  mod.rs  schema.rs  types.rs  village.rs
crates/edda-mcp/: Cargo.toml
crates/edda-mcp/src/: lib.rs
crates/edda-notify/: Cargo.toml
crates/edda-notify/src/: lib.rs
crates/edda-pack/: Cargo.toml
crates/edda-pack/src/: lib.rs
crates/edda-postmortem/: Cargo.toml
crates/edda-postmortem/src/: analyzer.rs  candidates.rs  hooks.rs  lessons.rs  lib.rs  rules.rs  scars.rs  sign_check.rs  signals.rs  trigger.rs
crates/edda-search-fts/: Cargo.toml
crates/edda-search-fts/src/: indexer.rs  lib.rs  schema.rs  search.rs  sync.rs  tokenizer.rs
crates/edda-serve/: Cargo.toml
crates/edda-serve/src/: error.rs  helpers.rs  lib.rs  middleware.rs  state.rs
crates/edda-serve/src/api/: analytics.rs  auth.rs  briefs.rs  dashboard.rs  drafts.rs  events.rs  ingestion.rs  metrics.rs  mod.rs  policy.rs  snapshots.rs  stream.rs  telemetry.rs
crates/edda-serve/static/: dashboard.html
crates/edda-store/: Cargo.toml
crates/edda-store/src/: fleet.rs  lib.rs  registry.rs  skill_registry.rs  user_config.rs
crates/edda-transcript/: Cargo.toml
crates/edda-transcript/src/: cursor.rs  extract.rs  filter.rs  ingest.rs  lib.rs
crates/edda-tui/: Cargo.toml
crates/edda-tui/src/: app.rs  main.rs  ui.rs
demo/: README.md  STORYBOARD.md  plan.yaml  run-demo.ps1  run-demo.sh  runtime-edda.js
demo/tests/: test_runtime_edda.js
docs/: README.md  README_zh-TW.md  開發.md
docs/architecture/: consistency-contract.md  overview.md
docs/blog/: 2026-02-22-edda-launch.md  2026-02-23-multi-agent-coordination.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: claude-code.md  for-agents.md  mcp.md  multi-agent.md  openclaw.md
orchestrator/: eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts  vitest.config.ts
scripts/: update-homebrew.sh
(+130 files in other folders)
