[workspace]
resolver = "2"
members = [
    "crates/edda-core",
    "crates/edda-ledger",
    "crates/edda-derive",
    "crates/edda-store",
    "crates/edda-bridge-claude",
    "crates/edda-bridge-openclaw",
    "crates/edda-transcript",
    "crates/edda-index",
    "crates/edda-pack",
    "crates/edda-mcp",
    "crates/edda-search-fts",
    "crates/edda-conductor",
    "crates/edda-tui",
    "crates/edda-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
ulid = "1"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
fs2 = "0.4"
clap = { version = "4", features = ["derive"] }
serde_yaml = "0.9"
blake3 = "1"
dirs = "6"
tempfile = "3"
globset = "0.4"
regex = "1"
uuid = { version = "1", features = ["v5"] }
