[package]
name = "edda"
description = "Decision memory for coding agents — CLI and TUI"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[[bin]]
name = "edda"
path = "src/main.rs"

[dependencies]
edda-aggregate = { path = "../edda-aggregate", version = "0.2.0" }
edda-ask = { path = "../edda-ask", version = "0.2.0" }
edda-chronicle = { path = "../edda-chronicle", version = "0.2.0" }
edda-core = { path = "../edda-core", version = "0.2.0" }
edda-ledger = { path = "../edda-ledger", version = "0.2.0" }
edda-derive = { path = "../edda-derive", version = "0.2.0" }
edda-store = { path = "../edda-store", version = "0.2.0" }
edda-bridge-claude = { path = "../edda-bridge-claude", version = "0.2.0" }
edda-bridge-codex = { path = "../edda-bridge-codex", version = "0.2.0" }
edda-bridge-cursor = { path = "../edda-bridge-cursor", version = "0.2.0" }
edda-bridge-hermes = { path = "../edda-bridge-hermes", version = "0.2.0" }
edda-bridge-openclaw = { path = "../edda-bridge-openclaw", version = "0.2.0" }
edda-transcript = { path = "../edda-transcript", version = "0.2.0" }
edda-index = { path = "../edda-index", version = "0.2.0" }
edda-pack = { path = "../edda-pack", version = "0.2.0" }
edda-mcp = { path = "../edda-mcp", version = "0.2.0" }
edda-serve = { path = "../edda-serve", version = "0.2.0" }
edda-notify = { path = "../edda-notify", version = "0.2.0" }
edda-postmortem = { path = "../edda-postmortem", version = "0.2.0" }
edda-search-fts = { path = "../edda-search-fts", version = "0.2.0" }
edda-conductor = { path = "../edda-conductor", version = "0.2.0" }
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }
clap.workspace = true
tokio = { version = "1", features = ["rt-multi-thread"] }
tokio-util = "0.7"
ctrlc = "3"
anyhow.workspace = true
serde_json.workspace = true
serde.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
hex.workspace = true
ulid.workspace = true
time.workspace = true
chrono = { version = "0.4", features = ["serde"] }
tracing-subscriber = { workspace = true }

[features]
default = ["tui"]
tui = ["ratatui", "crossterm"]

[dev-dependencies]
tempfile.workspace = true
