[package]
name = "edda-conductor"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
edda-store = { path = "../edda-store" }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yml = "0.0.12"
time.workspace = true
tokio = { version = "1", features = ["process", "time", "rt-multi-thread", "io-util", "macros"] }
tokio-util = "0.7"
async-trait = "0.1"
regex.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
