[package]
name = "edda-derive"
version.workspace = true
edition.workspace = true

[dependencies]
edda-core = { path = "../edda-core" }
edda-ledger = { path = "../edda-ledger" }
anyhow.workspace = true
time.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
