[package]
name = "edda-index"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
edda-store = { path = "../edda-store" }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
