[package]
name = "edda-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
edda-ask = { path = "../edda-ask" }
edda-core = { path = "../edda-core" }
edda-ledger = { path = "../edda-ledger" }
edda-derive = { path = "../edda-derive" }
rmcp = { version = "0.16", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars = "1"

[dev-dependencies]
tempfile.workspace = true
