[package]
name = "edda-mcp"
description = "MCP server exposing Edda tools via JSON-RPC 2.0"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
edda-ask = { path = "../edda-ask", version = "0.1.1" }
edda-core = { path = "../edda-core", version = "0.1.1" }
edda-ledger = { path = "../edda-ledger", version = "0.1.1" }
edda-derive = { path = "../edda-derive", version = "0.1.1" }
rmcp = { version = "0.16", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars = "1"

[dev-dependencies]
tempfile.workspace = true
