[package]
name = "edda-notify"
description = "Push notification dispatch for edda workspace events"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
edda-ledger = { path = "../edda-ledger", version = "0.1.0" }
ureq = "3"
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
