[package]
name = "edda-pack"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
edda-store = { path = "../edda-store" }
edda-index = { path = "../edda-index" }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
