[package]
name = "edda-pack"
description = "Context generation and budget controls for Edda"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
edda-store = { path = "../edda-store", version = "0.2.0" }
edda-index = { path = "../edda-index", version = "0.2.0" }
edda-ledger = { path = "../edda-ledger", version = "0.2.0" }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
