[package]
name = "edda-search-fts"
description = "Full-text search powered by Tantivy for Edda"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
edda-store = { path = "../edda-store", version = "0.2.0" }
edda-index = { path = "../edda-index", version = "0.2.0" }
edda-core = { path = "../edda-core", version = "0.2.0" }
tantivy = { version = "0.25", default-features = false, features = ["mmap", "lz4-compression"] }
rusqlite = { version = "0.32", features = ["bundled"] }
fs2 = "0.4"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing = { workspace = true }

[dev-dependencies]
tempfile.workspace = true
