[package]
name = "edda-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
blake3.workspace = true
dirs.workspace = true
tempfile.workspace = true
fs2.workspace = true
