[package]
name = "edda-store"
description = "Per-user store with atomic writes for Edda"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
edda-core = { path = "../edda-core", version = "0.1.1" }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
blake3.workspace = true
dirs.workspace = true
tempfile.workspace = true
fs2.workspace = true
time.workspace = true
