[package]
name = "edda-tui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "edda-tui"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
color-eyre = "0.6"

edda-store = { path = "../edda-store" }
edda-core = { path = "../edda-core" }
edda-ledger = { path = "../edda-ledger" }
edda-bridge-claude = { path = "../edda-bridge-claude" }

anyhow.workspace = true
serde_json.workspace = true
